# Conductr

./: .env.example  .gitignore  DesignDoc.md  pyproject.toml
deploy/: compose.dev.yml  prometheus.yml
deploy/grafana/provisioning/dashboards/: conductr.json  dashboard.yml
docker/: Dockerfile.gateway  Dockerfile.interactions  Dockerfile.web
gateway/: main.py
interactions/: command_utils.py  main.py  register_commands.py  verify.py  voice_handler.py
web/: db.py  main.py
web/templates/: index.html
