[project]
name = "conductr"
version = "0.1.0"
description = "Discord Bot to make AI background music for your voice channel"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "asyncpg>=0.30.0",
    "cryptography>=46.0.2",
    "discord-py>=2.6.4",
    "fastapi>=0.118.2",
    "httpx>=0.28.1",
    "itsdangerous>=2.2.0",
    "jinja2>=3.1.6",
    "passlib[bcrypt]>=1.7.4",
    "pydantic-settings>=2.11.0",
    "python-jose[cryptography]>=3.5.0",
    "redis>=6.4.0",
    "uvicorn[standard]>=0.37.0",
    "wavelink>=3.4.1",
]
